css/style.css
/* Sheet for main page style */
@import url(../fnt/portfolio-grom/portfolio-grom.css);

:root {
    /* Dark mode */
    --bg-color: #fff;
    --outline-color: #ccc;
    --dim-color: #f5f5f5;
    --text-color: #000;

    --color-easy: #46c6c2;
    --color-easy-dim: #46c6c26b;

    --color-medium: #fac31d;
    --color-medium-dim: #fac31d6b;

    --color-hard: #f8615c;
    --color-hard-dim: #f8615c6b;

    --atlassian-blue: #2668ca;
}

@media (prefers-color-scheme: dark) {
    :root {
        /* Dark mode */
        --bg-color: #1c1c1c;
        --outline-color: #505050;
        --dim-color: #303030;
        --text-color: #c5c5c5;

        --color-easy: #46c6c2;
        --color-easy-dim: #46c6c26b;

        --color-medium: #fac31d;
        --color-medium-dim: #fac31d6b;

        --color-hard: #f8615c;
        --color-hard-dim: #f8615c6b;

        --atlassian-blue: #5b6db5;
    }
}


@font-face {
    font-family: "Inter";
    src: url("../fnt/Inter.ttf") format("truetype");
}

html {
    height: 100%;
    scroll-behavior: smooth;
    position: relative;
}

html::after {
    position:absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;

    content: '';
    background-color: var(--bg-color);
    animation: fade-in 0.25s;
    opacity: 0;
    z-index: 1000;
    pointer-events: none;
}

@keyframes fade-in {
    from {
        opacity: 0.5;
    }
    to {
        opacity: 0;
    }
}

/* Firefox */
html {
  scrollbar-width: thin;
  scrollbar-color: var(--text-color);
}

/* Chrome, Edge, Safari */
::-webkit-scrollbar {
  width: 8px;
}

::-webkit-scrollbar-track {
  background: transparent;
}

::-webkit-scrollbar-thumb {
  background-color: color-mix(in srgb, var(--outline-color) 50%, rgba(255, 255, 255, 0));
  border-radius: 999px;
}

::-webkit-scrollbar-thumb:hover {
  background-color: var(--outline-color);
}


* {
    font-family: "Inter", Arial, sans-serif;
    /* font-family: Arial, Helvetica, sans-serif; */
    font-weight:normal;
    font-style:normal;
    box-sizing: border-box;
    /* text-transform: lowercase; */
}

body {
    position: relative;
    margin: 0;
    padding: 0;

    display: flex;
    flex-direction: column;
    gap: 10px;
    height: 100%;

    background-color: var(--bg-color);
    color: var(--text-color);
    /* perspective: 1500px; */

    overflow-x: hidden;
    overflow-y: auto;

    font-weight: 500;
    font-style: normal;
    position: relative;
    border: 10px solid var(--bg-color);
}

header {
    padding: 1rem;
    background-color: var(--bg-color);
    width: 100%;
    display: flex;
    align-items: center;
    gap: 15px;
    z-index: 100;
}

footer {
    padding: 1rem;
    padding-top: 1rem;
    background-color: var(--bg-color);
    width: 100%;
    display: flex;
    align-items: center;
    flex-flow: column;
    gap: 10px;
    z-index: 100;
}

.page-content {
    position: static;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: start;
    overflow-y: auto;
    padding: 0 1rem 1rem;
    margin: 0 1rem;
    height: 100%;
    gap: 20px;
}

.row {
    display: flex;
    flex-direction: row;
    gap: 10px;
    width: 100%;
}


.col {
    display: flex;
    flex-direction: column;
    gap: 10px;
    flex: 10;
    width: 100%;
    max-width: 1000px;
}

.col.centre {
    align-items: center;
}

.col.w1     { flex: 1 }
.col.w2     { flex: 2 }
.col.w3     { flex: 3 }
.col.w4     { flex: 4 }
.col.w5     { flex: 5 }
.col.w6     { flex: 6 }
.col.w7     { flex: 7 }
.col.w8     { flex: 8 }
.col.w9     { flex: 9 }
.col.w10    { flex: 10 }


.copyright {
    color: #808080;
    font-style: normal;
}

.logo {
    width: 3rem;
    height: auto;
    margin-right: 20px;
}

.links {
    position: relative;
    display: flex;
    align-items: center;
    gap: 15px;
    justify-content: center;
    width: 100%;
}

.links.float-left {
    justify-content: left;
}

a {
    color: var(--text-color);
}

.links a {
    padding: 5px 10px;
}

.portfolio {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    overflow: hidden;
    flex: 1;
}

.page {
    position: absolute;
    background-color: #000;
    border-radius: 2px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
    transform-origin: center;

    border: 1px solid var(--outline-color);

    transition: transform 0.2s ease, box-shadow 0.2s ease;
    margin: -30px;
    width: 320px;
    height: 240px;

    user-select: none;
}

@keyframes skeleton-loading {
    0% {
        background-color: var(--bg-color);
    }

    100% {
        background-color: var(--outline-color);
    }
}

.page-image {
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    z-index: -10;
    opacity: 0.5;

    filter: grayscale(50%);

    animation: skeleton-loading 1s ease infinite alternate;
    
    object-fit: cover;
    object-position: center;
    transition: opacity 0.2s ease, filter 0.3s ease;
    -webkit-user-drag: none ;
}

.page.selected > .page-image,
.page:hover >.page-image {
    opacity: 1;
    filter: grayscale(0%)
}

ul {
    list-style-position: inside;
    list-style-type: none;
    padding-left: 6px;
}

.link {
    margin-top: 4px;
    margin-bottom: 10px;

    display: flex;
    flex-direction: row;
    gap: 0.5rem;
    align-items: center;
    font-size: 1rem;
}

.page:hover {
    cursor: pointer;
}

.info {
    position: relative;
    width: 100%;
    min-width: 200px;
    height: fit-content;
    top: 100%;
    opacity: 0;
    transition: opacity 0.2s ease;
    display: flex;
    flex-flow: column;
}

.info.always-on {
    opacity: 1;
}

.page.selected .info {
    opacity: 1;
}

.page.filter-pane {
    position: absolute;
    width: 4px;
    left: calc(50% - 10px);
    height: 40%;
    margin-bottom: 100px;
    background-color: var(--outline-color);
    border-radius: 2px;
    border: none;
    box-shadow: 0 0 6px rgba(255, 255, 255, 0);
    pointer-events: none;
    display: flex;
    flex-direction: column;
}

.page.filter-pane > .info {
    position: absolute;
    top: -80px;
    left: 0px;
}

.page.filter-pane::after {
    content: "";
    position: absolute;
    left: 50%;
    top: 0;
    transform: translateX(-50%);
    width: 8px;
    height: 8px;
    background-color: var(--outline-color);
    border-radius: 50%;
}

h2 {
    font-weight: bold;
    margin-bottom: 4px;
}

sub {
    font-style: italic;
    margin-bottom: 5px;
    color: #808080;
}

.page-date { 
    position: absolute;
    font-size: 0.8rem;
    margin: 10px;
    border-radius: 10px;
    top: -20px;
    background-color: var(--bg-color);
    border: 1px solid var(--outline-color);
    padding: 2px 10px;
}

.project-skill-chips {
    opacity: 0.66;
}

.page {
    transition: transform 0.2s ease, opacity 0.2s ease;
}

.page.selected:hover {
    cursor: default;
}

.page:not(.selected):hover {
    transform: scale(1.05) translateY(-10px);
    margin: 50px;
}

.hamburger {
    visibility: hidden;
    margin-left: auto;

    background-color: var(--text-color);
    mask: url("../img/icon/hamburger.svg");

    width: 30px;
    height: 30px;

    mask-size: 30px 30px;
    mask-repeat: no-repeat;
    mask-position: left center;
}

.hamburger.show {
    mask: url("../img/icon/hamburger-close.svg");
    mask-size: 30px 30px;
    mask-repeat: no-repeat;
    mask-position: left center;
}

#navbar-links {
    visibility: visible;
}

.link-list {
    margin-top: 8px;
}

@media screen and (max-width: 800px) {
    body {
        border: none;
    }

    .row {
        flex-direction: column;
    }

    .links {
        gap: 5px;
    }

    .links a {
        flex: 1;
        text-align: center;
    }

    .page {
        transform: unset !important;
        display: flex;
        flex-direction: column;
        position: relative;
        height: 100%;
        width: 100%;
        margin: 0;

        min-height: 250px;
    }

    .page:not(.selected):hover {
        margin: 0;
    }

    .page.selected {
        background-color: #ccc;
    }

    .portfolio {
        position: static;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: start;
        overflow-y: auto;
        padding: 0 1rem 1rem;
        margin: 0 1rem;
        height: 100%;
        gap: 20px;
    }

    .info {
        position: static;
        padding: 30px 30px 15px 15px;
        width: fit-content;
        height: 100%;
        background-color: var(--bg-color);
        border-right: 1px var(--outline-color) solid;
    }

    .page .info {
        visibility: hidden;
        opacity: 1;
    }
    
    .page.selected .info {
        visibility: visible;
        opacity: 1;
    }

    .page-date {
        position: absolute;
        top: 5px;
        z-index: 10;
    }

    .page.filter-pane {
        position: static;
        background-color: transparent;
        height: fit-content;
        width: 100%;
        padding: 0;
        margin: 0;
        min-height: fit-content;
    }

    .page.filter-pane > .info {
        position: static;
        visibility: visible;
        padding: 0;
        width: 100%;
        height: 100%;
        background-color: var(--bg-color);
        border: none;
    }

    .optional {
        display: none;
    }

    .page.filter-pane::after {
        content: "";
        background-color: transparent;
    }

    .copyright {
        text-align: center;
    }

    header {
        padding: 1rem 2rem;
        border-bottom: 1px var(--outline-color) solid;
    }

    footer {
        padding: 1rem 2rem;
        border-top: 1px var(--outline-color) solid;
    }

    .hamburger {
        visibility: visible;
    }

    #navbar-links {
        display: flex;
        position: absolute;
        flex-direction: column;
        left: 0;
        top: 4rem;
        width: 100%;
        align-items: start;
        background-color: var(--bg-color);
        padding: 0 2rem 1rem 1rem;
        visibility: hidden;
        border-bottom: 1px var(--outline-color) solid;
        z-index: 10;
    }

    #navbar-links.show {
        visibility: visible;
    }
}


#game-holder {
    overflow: hidden;
}

#game-holder > iframe {
    border: none; 
    display: block; 
    transform-origin: 0 0;
    transform: scale(1);
}

#footer-links {
    display: none;
}

